[gd_scene load_steps=2 format=3 uid="uid://bl86vwnlw3q6v"]

[ext_resource type="Script" path="res://scenes/hud/main_menu.gd" id="1_3k8ao"]

[node name="MainMenu" type="VBoxContainer" node_paths=PackedStringArray("_final_score_label", "_start_button")]
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_3k8ao")
_final_score_label = NodePath("FinalScoreLabel")
_start_button = NodePath("StartButton")

[node name="FinalScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "0"

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="ResetHighscoreButton" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Reset Highscore"

[node name="TileColourPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="TileColourPicker" type="HBoxContainer" parent="TileColourPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TileColourLabel" type="Label" parent="TileColourPanel/TileColourPicker"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 32
text = "Tile Colour"

[node name="TileColourButton" type="ColorPickerButton" parent="TileColourPanel/TileColourPicker"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
flat = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ResetHighscoreButton" to="." method="_on_reset_highscore_pressed"]
[connection signal="color_changed" from="TileColourPanel/TileColourPicker/TileColourButton" to="." method="_on_tile_colour_changed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_pressed"]
